--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -1,81 +1,81 @@
 child {
-    margin: 9px;
-    border-radius:15px;
+  margin: 9px;
+  border-radius: 15px;
 }
 overlay > box {
-    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8));
-    border-radius:10px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  border-radius: 10px;
 }
 
 .logo {
-    background: rgba(0,0,0,0);
-}
- 
-overlay box > dropdown > button{
-    background:rgba(25, 28, 30, 0.4);
+  background: rgba(0, 0, 0, 0);
 }
 
-row{
-    margin-left:9px;
-    margin-right:9px;
-    border-radius:10px;
+overlay box > dropdown > button {
+  background: rgba(25, 28, 30, 0.4);
 }
-   
+
+row {
+  margin-left: 9px;
+  margin-right: 9px;
+  border-radius: 10px;
+}
+
 picture {
-    border-radius:10px;
+  border-radius: 10px;
 }
 
 listview {
-    background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
 }
- 
+
 gridview {
-    background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
 }
-  
+
 gridview > child box {
-    margin:0px;
+  margin: 0px;
 }
 
 list {
-    background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 overlay > label {
-    background-color: #AEB5FA;
-    border-radius: 999px;
-    margin:3px;
-    color: #FFFFFF;
+  background-color: #aeb5fa;
+  border-radius: 999px;
+  margin: 3px;
+  color: #ffffff;
 }
 
 box > overlay > image {
-    background-color: #AEB5FA;
-    border-radius: 999px;
-    margin:3px;
-    color: #FFFFFF;
+  background-color: #aeb5fa;
+  border-radius: 999px;
+  margin: 3px;
+  color: #ffffff;
 }
 
 revealer > expander-widget > box > box > widget {
-    background-color:rgba(1,1,1,0.3);
-    border-radius:10px;
-    margin:5px;
+  background-color: rgba(1, 1, 1, 0.3);
+  border-radius: 10px;
+  margin: 5px;
 }
 
-revealer > expander-widget > box > box > widget > box{
-    margin:15px;
+revealer > expander-widget > box > box > widget > box {
+  margin: 15px;
 }
 
 box > scrolledwindow > viewport > box > box {
-    margin:5px;
-    background-color:rgba(0,0,0,0.3);
-    border-radius:10px;
+  margin: 5px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 scrolledwindow > viewport > box > box > label {
-    margin:15px;
+  margin: 15px;
 }
 scrolledwindow > viewport > box > box > box {
-    margin-left:15px;
-    margin-top:15px;
+  margin-left: 15px;
+  margin-top: 15px;
 }
 /*
 Generated with Gradience
@@ -212,22 +212,27 @@ https://github.com/GradienceTeam/Gradience
 */
 
 placessidebar {
-    background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
 }
-.sidebar-pane{
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    background-color: rgba(0, 0, 0, 0);
-    }
-    
-.navigation-sidebar {
-    background-color: rgba(0, 0, 0, 0);
-    }
-    
-window.background.nautilus-window {
-    background: rgba(25, 28, 30, 0.9);
-    }
-.undershoot-top{
-        color: rgba(255, 255, 255, 0.8);
+.sidebar-pane {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0);
 }
 
-        
+.navigation-sidebar {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+window.background.nautilus-window {
+  background: rgba(25, 28, 30, 0.9);
+}
+.undershoot-top {
+  color: rgba(255, 255, 255, 0.8);
+}
+label {
+  font-size: 16px;
+}
+
+.large-font {
+  font-size: 18px;
+}
