Squashed commit of the following:
commit e2bfcc37ddaa126aef44f039626be01f34bd340b
Author: Inaha <sakuovds@gmail.com>
Date:   Thu Apr 4 20:54:10 2024 +0800

    fix: sub missing

commit bd893fa25a42a54edb4b21a4ee551f8518f16a09
Author: Inaha <sakuovds@gmail.com>
Date:   Thu Apr 4 19:13:18 2024 +0800

    feat: add background height option
    chore: button margin

--- a/resources/ui/item.ui
+++ b/resources/ui/item.ui
@@ -56,6 +56,7 @@
                     <property name="hexpand">true</property>
                     <child>
                       <object class="GtkDropDown" id="seasonlist">
+                      <property name="margin-start">10</property>
                       </object>
                     </child>
                     <child>
@@ -82,6 +83,7 @@
                     </child>
                     <child>
                       <object class="GtkToggleButton" id="go-last-symbolic">
+                        <property name="margin-end">15</property>
                         <property name="halign">end</property>
                         <property name="icon-name">go-last-symbolic</property>
                         <property name="action-name">item.last</property>
