--- a/resources/ui/settings.ui
+++ b/resources/ui/settings.ui
@@ -32,6 +32,20 @@
                             <property name="subtitle" translatable="yes">or side by side</property>
                           </object>
                         </child>
+                        <child>
+                          <object class="AdwSpinRow" id="spinrow">
+                            <property name="title" translatable="yes">Background Height</property>
+                            <property name="adjustment">
+                              <object class="GtkAdjustment">
+                                <property name="lower">350</property>
+                                <property name="upper">1000</property>
+                                <property name="value">700</property>
+                                <property name="page-increment">10</property>
+                                <property name="step-increment">50</property>
+                              </object>
+                            </property>
+                          </object>
+                        </child>
                         <style>
                           <class name="boxed-list" />
                         </style>
