--- a/src/ui/adwaitadark.css
+++ b/src/ui/adwaitadark.css
@@ -202,3 +202,11 @@ button.titlebutton.minimize:hover,
 windowcontrols > button.minimize:hover {
   opacity: 0.8;
 }
+
+label {
+  font-size: 16px;
+}
+
+.large-font {
+  font-size: 18px;
+}
