--- a/src/ui/alpha-dark.css
+++ b/src/ui/alpha-dark.css
@@ -201,3 +201,11 @@ windowcontrols > button.minimize:hover {
   background-color: rgba(0, 0, 0, 0);
   color: rgba(255, 255, 255, 0.8);
 }
+
+label {
+  font-size: 16px;
+}
+
+.large-font {
+  font-size: 18px;
+}
