--- a/src/ui/basic.css
+++ b/src/ui/basic.css
@@ -130,3 +130,11 @@ button.titlebutton.minimize:hover,
 windowcontrols > button.minimize:hover {
   opacity: 0.8;
 }
+
+label {
+  font-size: 16px;
+}
+
+.large-font {
+  font-size: 18px;
+}
