--- a/src/ui/basic.css
+++ b/src/ui/basic.css
@@ -1,3 +1,7 @@
+* {
+  box-shadow: none;
+}
+
 .checkwatched {
   background: rgba(0, 0, 0, 0.1);
 }
@@ -47,13 +51,13 @@ list {
 
 overlay > label {
   background-color: #aeb5fa;
-  border-radius: 999px;
+  border-radius: 9px;
   margin: 3px;
 }
 
 box > overlay > image {
   background-color: #aeb5fa;
-  border-radius: 999px;
+  border-radius: 9px;
   margin: 3px;
 }
 
@@ -86,9 +90,6 @@ scrolledwindow > viewport > box > box > box {
 
 placessidebar {
   background-color: rgba(0, 0, 0, 0);
-}
-.sidebar-pane {
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 windowcontrols > button {
