--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -1,3 +1,7 @@
+* {
+  box-shadow: none;
+}
+
 child {
   margin: 9px;
   border-radius: 15px;
@@ -47,13 +51,13 @@ list {
 
 overlay > label {
   background-color: #aeb5fa;
-  border-radius: 999px;
+  border-radius: 9px;
   margin: 3px;
 }
 
 box > overlay > image {
   background-color: #aeb5fa;
-  border-radius: 999px;
+  border-radius: 9px;
   margin: 3px;
 }
 
@@ -88,7 +92,6 @@ placessidebar {
   background-color: rgba(0, 0, 0, 0);
 }
 .sidebar-pane {
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   background-color: rgba(0, 0, 0, 0);
   color: #000;
 }
