chore: reduce thread worker number chore: fix css issue deps: bump version

--- a/src/ui/alpha-dark.css
+++ b/src/ui/alpha-dark.css
@@ -1,4 +1,4 @@
-* {
+window {
   box-shadow: none;
 }
 
@@ -47,13 +47,13 @@ list {
 
 overlay > label {
   background-color: #aeb5fa;
-  border-radius: 9px;
+  border-radius: 999px;
   margin: 3px;
 }
 
 box > overlay > image {
   background-color: #aeb5fa;
-  border-radius: 9px;
+  border-radius: 999px;
   margin: 3px;
 }
 
@@ -205,6 +205,7 @@ windowcontrols > button.minimize:hover {
 }
 
 .sidebar-pane {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   background-color: rgba(0, 0, 0, 0);
   color: rgba(255, 255, 255, 0.8);
 }
