--- a/src/ui/basic.css
+++ b/src/ui/basic.css
@@ -1,4 +1,4 @@
-* {
+window {
   box-shadow: none;
 }
 
@@ -51,13 +51,13 @@ list {
 
 overlay > label {
   background-color: #aeb5fa;
-  border-radius: 9px;
+  border-radius: 999px;
   margin: 3px;
 }
 
 box > overlay > image {
   background-color: #aeb5fa;
-  border-radius: 9px;
+  border-radius: 999px;
   margin: 3px;
 }
 
@@ -92,6 +92,9 @@ placessidebar {
   background-color: rgba(0, 0, 0, 0);
 }
 
+.sidebar-pane {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
 windowcontrols > button {
   /* GTK4 */
   color: transparent;
