--- a/resources/ui/included.ui
+++ b/resources/ui/included.ui
@@ -18,7 +18,7 @@
           </object>
         </child>
         <child>
-          <object class="AdwSpinner" id="spinner">
+          <object class="GtkSpinner" id="spinner">
             <property name="visible">True</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
