--- a/resources/ui/picture_loader.ui
+++ b/resources/ui/picture_loader.ui
@@ -20,7 +20,7 @@
           </object>
         </child>
         <child type="overlay">
-          <object class="AdwSpinner" id="spinner">
+          <object class="GtkSpinner" id="spinner">
             <property name="halign">center</property>
             <property name="valign">center</property>
             <property name="visible">True</property>
